@@ -9,6 +9,7 @@ Enhancements
 
 Bug fixes
  - [web] fixed attachment path when inside multiple body parts
+ - [web] fixed email reminder with attendees (#4115)
  - [core] cherry-picked comma escaping fix from v2 (#3296)
  - [core] fix sogo-tool restore potentially crashing on corrupted data (#4048)
  - [eas] set reply/forwarded flags when ReplaceMime is set (#4133)
